# Mathematics-of-a-Web-Search-Engine

./: CMakeLists.txt  README.md
data/: doc1.txt  doc2.txt  doc3.txt
src/: DocumentStore.cpp  DocumentStore.h  InvertedIndex.cpp  InvertedIndex.h  PageRank.cpp  PageRank.h  QueryEngine.cpp  QueryEngine.h  Ranker.cpp  Ranker.h  Tokenizer.cpp  Tokenizer.h  main.cpp
